force-app/main/default/objects/SF_Printer_Event__e/SF_Printer_Event__e.object-meta.xml
<CustomObject>
    <label>SF Printer Event</label>
    <pluralLabel>SF Printer Events</pluralLabel>
</CustomObject>