force-app/main/default/objects/SF_Printer_Event__e/fields/Auth_Config__c.field-meta.xml
<CustomField>
    <fullName>Auth_Config__c</fullName>
    <label>Auth Config</label>
    <description>JSON HTTP auth credentials for *_uri content downloads. Leave blank for public URLs.
Format: {"type":"BasicAuth","user":"username","pass":"password"}
Supported types: BasicAuth, DigestAuth</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>