force-app/main/default/objects/SF_Printer_Event__e/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <label>Content</label>
    <description>The print payload. Either a URL (for *_uri types) or base64-encoded data (for *_base64 types). ZPL goes here as raw_base64.</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>