force-app/main/default/objects/SF_Printer_Event__e/fields/Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Content_Type__c</fullName>
    <label>Content Type</label>
    <description>How the content is encoded. Valid values: pdf_uri | pdf_base64 | raw_uri | raw_base64</description>
    <type>Text</type>
    <length>20</length>
</CustomField>