force-app/main/default/objects/SF_Printer_Event__e/fields/Correlation_Id__c.field-meta.xml
<CustomField>
    <fullName>Correlation_Id__c</fullName>
    <label>Correlation Id</label>
    <description>UUID for idempotency. Server ignores duplicate events with the same Correlation_Id__c.</description>
    <type>Text</type>
    <length>36</length>
</CustomField>