force-app/main/default/objects/SF_Printer_Event__e/fields/Expire_After__c.field-meta.xml
<CustomField>
    <fullName>Expire_After__c</fullName>
    <label>Expire After</label>
    <description>Seconds after which an undelivered job is discarded. Leave blank for default (no expiry).</description>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
</CustomField>