force-app/main/default/objects/SF_Printer_Event__e/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <label>Job Title</label>
    <description>Name shown in the OS print queue.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>