force-app/main/default/objects/SF_Printer_Event__e/fields/Printer_Host__c.field-meta.xml
<CustomField>
    <fullName>Printer_Host__c</fullName>
    <label>Printer Host</label>
    <description>IP address or hostname of the target printer. Required for print_job events.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>