force-app/main/default/objects/SF_Printer_Event__e/fields/Printer_Port__c.field-meta.xml
<CustomField>
    <fullName>Printer_Port__c</fullName>
    <label>Printer Port</label>
    <description>TCP port of the target printer. Defaults to 9100 on the server if blank.</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>