force-app/main/default/objects/SF_Printer_Event__e/fields/Printer_Type__c.field-meta.xml
<CustomField>
    <fullName>Printer_Type__c</fullName>
    <label>Printer Type</label>
    <description>Driver type. Valid values: zpl | raw | cups | ipp</description>
    <type>Text</type>
    <length>10</length>
</CustomField>