force-app/main/default/objects/SF_Printer_Event__e/fields/Qty__c.field-meta.xml
<CustomField>
    <fullName>Qty__c</fullName>
    <label>Qty</label>
    <description>Number of times to repeat the job. Applies to RAW/ZPL only. PDF copies go in Options__c.</description>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>