force-app/main/default/objects/SF_Printer_Event__e/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <description>Free-text origin label, e.g. Order #12345. Used for logging only.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>