force-app/main/default/objects/SF_Printer_Event__e/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <description>Event type. Valid values: print_job</description>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>